build.gradle: WIP generation of start scripts.